--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,17 +19,33 @@ div h2{
     width: 100%;
     margin: 0 auto;/*二つ目の引数は左右のmargin(他のブロックからの距離:ここでは壁)autoにすることでwidthが効く*/
     background: rgb(235, 227, 175);
+    font-weight: 900;
+    color: #333;
 }
 
+/*logo*/
 .logo{
     display: flex;
     justify-content: center;
     align-items:center;
-    font-weight: 900;
+}
+
+.logo div{
+    padding: 10px;
 }
 
 .logo img{
     display: inline-block;/*画像のテキスト化*/
-    height: 200px;
+    width: 200px;
+    max-width: 40%;
 }
 
+.logo_words{
+    max-width: 40%;
+}
+
+.logo_words div{
+    text-align: left;
+    padding: 2px;
+
+}
