--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,17 +31,15 @@ div h2{
 }
 
 .logo div{
-    padding: 10px;
+    padding: 0 1%;
 }
 
 .logo img{
     display: inline-block;/*画像のテキスト化*/
     width: 200px;
-    max-width: 40%;
 }
 
 .logo_words{
-    max-width: 40%;
 }
 
 .logo_words div{
