--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,11 +8,12 @@ body{
 }
 
 body h1{
-    font-size: 60px;
+    font-size: min(60px, 12vw);
+
 }
 
 body h2{
-    font-size: 30px;
+    font-size: min(30px, 6vw);
 }
 
 body b{
@@ -46,8 +47,8 @@ body b{
     display: inline-block;/*画像のテキスト化*/
     width: 250px;
     height: 250px;
-    max-width: 50vw;
-    max-height: 50vw;
+    max-width: 47vw;
+    max-height: 47vw;
 }
 
 .logo_words div{
