--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,10 +16,14 @@ body h1{
 body h2{
     -webkit-text-stroke: 1px #333;
     color: #EEE;
-    font-size: min(30px, 5vw);
+    font-size: min(30px, 4vw);
 }
 
 body h3{
+    font-size: 60px;
+}
+
+body h4{
     font-size: 30px;
 }
 
@@ -29,7 +33,7 @@ body b{
 
 .header{
     width: 100%;
-    height: 600px;
+    height: 400px;
     margin: 0 auto;/*二つ目の引数は左右のmargin(他のブロックからの距離:ここでは壁)autoにすることでwidthが効く*/
     background-image:url(../img/IMG_8187.jpg);
     background-size: contain;
@@ -75,6 +79,10 @@ body b{
     background: #EEE;
     padding: 5%;
     line-height: 2em;
+}
+
+.content div{
+    margin-bottom: 5%;
 }
 
 body p{
