--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,6 @@ body{
     font-family: "Roboto", "Zen Kaku Gothic Antique", sans-serif;
     font-size: 16px;
     border-top: 10px solid rgb(192, 6, 229);
-    border-bottom: 10px solid rgb(192, 6, 229);
 }
 
 body h1{ 
@@ -95,6 +94,15 @@ body p{
     margin-bottom:10px;
     /* padding-left: 1em; */
     /* text-indent: -1em; */
+}
+
+body .Footer{
+    font-size: 10px;
+    text-align: center;
+    align-self: flex-end;
+    display: block;
+    width: 100%;
+    background-color:rgb(192, 6, 229);;
 }
 
 /*
