--- a/CSS/style.css
+++ b/CSS/style.css
@@ -136,7 +136,7 @@ ul,li {
 /*top---------------------------------------------*/
 .top{
     width: 100%;
-    height: 480px;
+    height: 491px;
     margin: 0 auto;/*二つ目の引数は左右のmargin(他のブロックからの距離:ここでは壁)autoにすることでwidthが効く*/
     background-image:url(../img/IMG_8187.jpg);
     background-size: contain;
@@ -161,18 +161,19 @@ ul,li {
     padding: 0 10px;
 }
 
+.logo .logo_word{
+    display: flex;
+    justify-content: center;
+    align-items: top;
+    margin-right: 5vw;
+}
+
 .logo img{
     display: inline-block;/*画像のテキスト化*/
     width: 250px;
     height: 250px;
     max-width: 47vw;
     max-height: 47vw;
-}
-
-.logo .logo_word{
-    display: flex;
-    justify-content: center;
-    align-items: top;
 }
 
 /*content------------------------------------------------------*/
